# conll2ske

./: .gitignore  README.md  conll2sketch.ipynb  conll2vert.ipynb  pyproject.toml
doc/: example.registry
src/conll2ske/: main.py  process.py
tests/: test_process.py
